--- a/Clase 8 - Flexbox Practica/index.css
+++ b/Clase 8 - Flexbox Practica/index.css
@@ -68,3 +68,32 @@ input {
     border-radius: 15px;
     border-style: none;
 }
+
+
+@media (max-width:1250px) {
+    .contenedor-login {
+        flex-direction: column-reverse;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .img-estatua {
+        margin-top: 40px;
+        min-width: 200px;
+        border: 3px white solid;
+        border-radius: 100%;
+    }
+
+    form {
+        width: 70%;
+        padding: 40px;
+    }
+
+}
+
+
+@media (max-width: 800px) {
+    .contenedor-login {
+        width: 60%;
+    }
+}
