--- a/Clase 10 y 11 - Pedimon/index.css
+++ b/Clase 10 y 11 - Pedimon/index.css
@@ -10,8 +10,11 @@ a {
 }
 
 .header {
+    position: fixed;
+    width: 100%;
     height: 12vh;
     display: flex;
+    flex-wrap: wrap;
     justify-content: space-around;
     align-items: center;
     background-color: #F7DE82;
@@ -36,13 +39,15 @@ a {
     display: flex;
     justify-content: center;
     align-items: center;
+    flex-wrap: wrap;
     gap: 80px;
-    height: 70vh;
+    height: 88vh;
     background-color: #F7DE82;
 }
 
 .img-pikachu-hero {
     width: 25%;
+    min-width: 300px;
 }
 
 .container-inicio {
@@ -51,6 +56,7 @@ a {
 
 .container-inicio img {
     width: 70%;
+    min-width: 200px;
 }
 
 .container-inicio p {
@@ -68,9 +74,103 @@ a {
     border-radius: 12px;
     border-style: none;
     margin-top: 40px;
+    min-width: 190px;
 }
 
 .icono-carrito {
     color: #0C4E9B;
     font-size: 1.4em
+}
+
+.section-info {
+    width: 100%;
+    background-color: #0C4E9B;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 60px;
+    height: 100vh;
+}
+
+.title-section-info {
+    color: #F7DE82;
+    font-size: 3em;
+    text-transform: uppercase;
+}
+
+.paragraph-section-info {
+    color: white;
+    font-size: 1.5em;
+    font-weight: 300;
+}
+
+.container-section-info {
+    width: 100%;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+}
+
+.container-element-info {
+    width: 25%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+
+.container-element-info img {
+    width: 25%;
+}
+
+.container-element-info p {
+    color: white;
+    font-size: 1.5em;
+    text-align: center;
+    font-weight: 300;
+    margin-top: 20px;
+    width: 50%;
+}
+
+@media (max-width: 1024px) {
+    .container-inicio button {
+        font-size: 1em;
+    }
+
+    .container-inicio p {
+        font-size: 1.1em;
+    }
+}
+
+
+@media (max-width: 700px) {
+    .section-inicio {
+        flex-direction: column-reverse;
+     }
+
+     .container-inicio {
+        width: 60%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+     }
+     .container-inicio img {
+        margin-bottom: 20px;
+     }
+     .img-pikachu-hero {
+        display: none;
+     }
+
+     .header nav {
+        width: 100%;
+     }
+
+     .list-nav {
+        gap: 20px;
+        justify-content: center;
+        width: 100%;
+        margin-top: 10px;
+     }
 }
